add config and run informations to the readme